--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "karma-sinon-chai": "^0.3.0",
     "karma-webpack": "^1.5.0",
     "mocha": "^2.2.4",
-    "react": "^0.13.1",
+    "react": "^0.14.0-beta1",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0",
     "webpack": "^1.8.2"
   },
   "peerDependencies": {
-    "react": "^0.13.1"
+    "react": "^0.14.0-beta1"
   },
   "scripts": {
     "pretest": "jscs --esnext ./",
